# yandex-translate

./: Cargo.toml  LICENSE.md  README.md
src/: asynchronous.rs  blocking.rs  lib.rs
