[package]
name = "yandex-translate-v2"
version = "0.1.0"
authors = ["savannstm <savannstm@gmail.com>"]
edition = "2021"
description = "Yandex Translate API v2 client (and not only v2)."
documentation = "https://docs.rs/yandex-translate-v2"
homepage = "https://crates.io/crates/yandex-translate-v2"
repository = "https://github.com/savannstm/yandex-translate-v2"
readme = "README.md"
rust-version = "1.83.0"
license-file = "LICENSE.md"
keywords = ["tokenizer", "text", "linguistic", "language", "segmenter"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
reqwest = { version = "0.13.1", features = ["json"] }
thiserror = "2.0.17"

tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"], optional = true }

[features]
default = ["blocking"]
blocking = ["reqwest/blocking"]
async = ["dep:tokio"]
